# PhysioNet

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-local.txt
.agent/workflows/: download-data.md  export-model.md  extract-best-params.md  full-pipeline.md  generate-report.md  health-check.md  post-tune.md  train-baseline.md  train-ray.md  train-signalsavants.md  tune-ray.md  tune.md
configs/: approach.yaml  config.yaml  ray.yaml
configs/approach/: baseline.yaml  default.yaml  signalsavants.yaml
configs/data/: default.yaml
configs/model/: resnet50.yaml
configs/training/: default.yaml
docker/: Dockerfile  README.md  base_ml.Dockerfile  docker-compose.yml  requirements.txt  requirements_core.txt
docker/mlflow/: docker-compose.yml
docs/: architecture.md  mlflow_guide.md
mlflow/: mlflow.db  mlflow.db-journal
notebooks/: kaggle_submission.ipynb
reports/: README.md  run_4174fde5_20251226_220817.md
scripts/: README.md  generate_report.py
src/ecg_digitization/: __init__.py  compare_approaches.py  pipeline_factory.py  predict.py  submit.py  train.py  train_ray.py
src/ecg_digitization/data/: __init__.py  dataset.py  hough_deskew.py  preprocessing.py  ray_data.py  transforms.py
src/ecg_digitization/inference/: __init__.py  predictor.py  vectorizer.py
src/ecg_digitization/models/: __init__.py  backbone.py  digitizer.py  encoder_decoder.py  nnunet_segmenter.py  signal_head.py
src/ecg_digitization/training/: __init__.py  losses.py  ray_trainer.py  segmentation_loss.py  trainer.py
src/ecg_digitization/utils/: __init__.py  calibration.py  config.py  extract_best_params.py  logging.py  metrics.py  mlflow_utils.py  report_generator.py
tests/: __init__.py
